--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <base target="_top">
- </head>
- <body>
-   <h1>My Heading</h1>
-   <p>My paragraph.</p>
-
-  </body>
-  <script>
-
-  var a = "test1"
-   //window.alert(a);
-   console.log(a);
+<head>
+  <base target="_top">
+</head>
+<body>
+  <h1>WDH</h1>
+  <p>Archive of research findings on subjective enjoyment of life</p>
+  <p>TEST</p>
+  <a href="http://worlddatabaseofhappiness.eur.nl/">Click here for the real website</a>
 
 
-  </script>
+ </body>
+ <script>
+
+ var a = "test1"
+  //window.alert(a);
+  console.log(a);
+
+
+ </script>
 </html>
